--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <a href="#" class="footer__social-link">
             <img
             class="footer__social-icon"
-            alt="Значок Вконтакте"
+            alt="Значок вконтакте"
             src="./images/pinterest.svg"
           >
           </a>
