--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
    alt="Логотип проекта"
    >
    </a>
-   <adress class="address address__title">
+   <address class="address address__title">
     <a href="tel:+99995555555">+9999555-55-55</a><br>
     <a href="mailto:info@sobaka.he">info@sobaka.ge</a>
     <p class="header__address">наб. Принсенграхт 263-<br>265, Амстердам</p>
-    </adress>
+    </address>
 </header>
 <main>
 
@@ -115,11 +115,11 @@
 
 
 <footer class="footer">
-  <adress class="address">
+  <address class="address">
     <a href="tel:+99995555555">+9999555-55-55</a><br>
     <a href="mailto:info@sobaka.he">info@sobaka.ge</a>
     <p class="header__address">наб. Принсенграхт 263-<br>265, Амстердам</p>
-    </adress>
+    </address>
     
     <nav class="footer__menu">
       <ul class="footer__menu-list">
