--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
 
-
   <body>
     <header class="header">
       <nav class="header__menu">
@@ -162,9 +161,7 @@
       <address class="footer__address">
         <a href="tel:+99995555555">+9999555-55-55</a>
         <a href="mailto:info@sobaka.he">info@sobaka.ge</a>
-        <p>
-          наб. Принсенграхт 263-<br />265, Амстердам
-        </p>
+        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
 
       <nav class="footer__menu">
@@ -178,7 +175,7 @@
             <a href="#0" class="footer__menu-link">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a href="#0 "class="footer__menu-link">об аукционе</a>
+            <a href="#0" class="footer__menu-link">об аукционе</a>
           </li>
         </ul>
       </nav>
