--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullet">
-            <a href="#id" class="header__link_active header__link-main"
+            <a href="#cover" class="header__link_active header__link-main"
               >главная</a
             >
           </li>
           <li class="header__links-list-item">
-            <a href="#id" class="header__link_active">посмотреть лоты</a>
+            <a href="#lots" class="header__link_active">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a href="#id" class="header__link_active">об аукционе</a>
+            <a href="#about" class="header__link_active">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -43,7 +43,7 @@
       </address>
     </header>
     <main>
-      <section class="cover">
+      <section class="cover" id="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
           <span class="aligned-text"
@@ -67,7 +67,7 @@
         </div>
       </section>
 
-      <section class="lots">
+      <section class="lots" id="lots">
         <h2 class="lots__heading">ЛОТЫ</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
@@ -123,7 +123,7 @@
         <a href="#" class="lots__look-more-link">посмотреть больше</a>
       </section>
 
-      <section class="about">
+      <section class="about" id="about">
         <div class="about__column">
           <div class="about__logo">
             <img
@@ -167,15 +167,15 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a href="#" class="footer__menu-link footer__menu-link_no-underline"
+            <a href="#cover" class="footer__menu-link footer__menu-link_no-underline"
               >главная</a
             >
           </li>
           <li class="footer__menu-list-item">
-            <a href="#0" class="footer__menu-link">посмотреть лоты</a>
+            <a href="#lots" class="footer__menu-link">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a href="#0" class="footer__menu-link">об аукционе</a>
+            <a href="#about" class="footer__menu-link">об аукционе</a>
           </li>
         </ul>
       </nav>
