--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <a href="#" class="footer__social-link">
             <img
               class="footer__social-icon"
-              alt="Значок пинтерест"
+              alt="Значок Пинтерест"
               src="./images/pinterest.svg"
             />
           </a>
